# ai_dm_bot

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: instructions.mdc
bot/: bot.py
config/: adventure_promt.py  config.py  hard_messages.py  summary_promt.py  tts_promt.py
data/groups/: group_-1002235021603.json  group_-1002617348529.json  group_1342626109.json
data/history/: chat_-1002235021603.json  chat_1342626109.json
handlers/: message_handlers.py
services/: campaign_service.py  character_service.py  chat_settings_service.py  group_service.py  history_service.py  log_token_usage_service.py  logger_service.py  openai_service.py  rag_service.py  summary_service.py  usage_service.py  voice_service.py
utils/: utils.py
